Tutorial-2/Function/Functions-II
>>> #here we will defining the argument values in the python functions, that are in the 3 forms
>>> #1 default argument values
>>> #2 keyword argument
>>> #3 special parameters
>>>
>>> #1 this form is to specify a default value for one or more arguments and it creates a function that can be called with the fewer arguments,
>>> def ask_ok(prompt, retries=4, reminder='Please try again!'):
...     while True:
...         reply = input(prompt)
...         if reply in {'y', 'ye', 'yes'}:
...             return True
...         if reply in {'n', 'no', 'nop', 'nope'}:
...             return False
...         retries = retries - 1
...         if retries < 0:
...             raise ValueError('invalid user response')
...         print(reminder)
>>> ask_ok('Do you need to write sample test one more')
Do you need to write sample test one morek
Please try again!
Do you need to write sample test one morel
Please try again!
Do you need to write sample test one morem
Please try again!
Do you need to write sample test one moreyes
True


>>> #2 In this form function can also be called using keyword arguments for the  function(keyword=argumnet)
>>> def car_robot(name, speed='5 km/hr', destination='coffee shop'):
...     print('The Agent', name, 'Reach the', destination, 'by', speed, 'speed')
...
>>> #you can call the function and pass the argument by using the keyword like this,
>>> car_robot('finn')
The Agent finn Reach the coffee shop by 5 km/hr speed
>>> car_robot('finn', destination='park')
The Agent finn Reach the park by 5 km/hr speed
>>> car_robot('finn', destination='park', speed='4 km/hr')
The Agent finn Reach the park by 4 km/hr speed
>>> car_robot('finn', destination='park','4 km/hr')
  File "<stdin>", line 1
    car_robot('finn', destination='park','4 km/hr')
                                                  ^
SyntaxError: positional argument follows keyword argument
